--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/firebase": "^3.2.1",
     "dotenv": "^16.3.1",
     "firebase": "^10.4.0",
     "lucide-react": "^0.279.0",
